<resources>
    <string name="app_name">EdTechApp</string>
    <string name="onboarding_header">Discover your\nnext skill with us</string>
    <string name="onboarding_body">We have designed our course with video lessons, tests and assignments</string>
    <string name="cont">Continue</string>
    <string name="login_txt">You need to login</string>
    <string name="login_why">Why?</string>
    <string name="skip">Skip</string>
    <string name="tnc_txt"><![CDATA[By signing in you agree to our Privacy Policy and Terms & Conditions]]></string>
    <string name="profile">Profile</string>
    <string name="forrum">Forrum</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_head">What should we call you?</string>
    <string name="name_body">Enter you name</string>
    <string name="play_vid">Play Video</string>
    <string name="full_screen">Full Screen</string>
    <string name="read">Read Now</string>
    <string name="next">Next Lesson</string>
    <string name="test">Test</string>

    <string name="fontFamily__serif">serif</string>
    <string name="fontFamily__sans_serif">sans-serif</string>
    <string name="fontFamily__sans_serif_light">sans-serif-light</string>
    <string name="fontFamily__sans_serif_condensed">sans-serif-condensed</string>
    <string name="fontFamily__sans_serif_thin">sans-serif-thin</string>
    <string name="fontFamily__sans_serif_medium">sans-serif-medium</string>
    <string name="fontFamily__serif_monospace">serif-monospace</string>
    <string name="fontFamily__casual">casual</string>
    <string name="fontFamily__cursive">cursive</string>
    <string name="fontFamily__monospace">monospace</string>
</resources>