<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    tools:context=".NameActivity">
    
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/textLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginTxt"
            android:text="@string/name_head"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/color_primary_txt"
            android:textSize="28sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/centerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tncTxt"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/textLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/enterTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/name_body"
            android:textAlignment="center"
            android:textColor="@color/color_primary_txt"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round_fg"
            android:padding="14dp"
            android:layout_marginTop="16sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/countryCodeTxt"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:drawablePadding="8dp"
                android:layout_marginStart="2dp"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:textColor="@color/color_primary_txt" />

            <!--                Todo: implement multiple country codes-->

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="Your Name"
                android:inputType="textPersonName"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:textColor="@color/color_primary_txt"
                android:textColorHint="@color/color_secondary_txt"
                android:backgroundTint="@android:color/transparent" />


        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:backgroundTint="@color/color_cta"
            android:text="@string/cont"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="16dp"
            android:drawableRight="@drawable/ic_cont_arrow"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skipBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:background="@android:color/transparent"
            android:textColor="@color/color_primary_txt"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="16dp"
            app:cornerRadius="16dp" />


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/tnc_txt"
        android:textAlignment="center"
        android:textColor="@color/color_secondary_txt"
        android:fontFamily="@font/poppins_light"
        android:textSize="14sp"
        android:id="@+id/tncTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>