<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fg"
    android:padding="26dp"
    tools:context=".OnBoardingActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_margin="2dp"
        android:src="@drawable/il_onboarding"
        app:layout_constraintBottom_toTopOf="@id/textLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/textLayout"
        app:layout_constraintBottom_toTopOf="@id/continueBtn"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        >

    <TextView
        android:id="@+id/headerTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:layout_margin="2dp"
        android:text="@string/onboarding_header"
        android:textAlignment="center"
        android:textColor="@color/color_primary_txt"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:layout_editor_absoluteX="26dp" />

    <TextView
        android:id="@+id/bodyTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/onboarding_body"
        android:textAlignment="center"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:autoSizeMaxTextSize="2dp"
        android:textColor="@color/color_secondary_txt"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/continueBtn"
        app:layout_constraintTop_toBottomOf="@id/headerTxt"
        tools:layout_editor_absoluteX="26dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/textLayout"
        android:layout_margin="2dp"
        android:backgroundTint="@color/color_cta"
        android:text="@string/cont"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins"
        android:drawableRight="@drawable/ic_cont_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="16dp" />





</androidx.constraintlayout.widget.ConstraintLayout>